--- a/zh-Hant.pass.strings
+++ b/zh-Hant.pass.strings
@@ -15,3 +15,5 @@
 "event_end_date" = "活動結束時間";
 "official_site" = "官方網站";
 "order_id" = "訂單編號";
+"city_title" = "高雄";
+"date_range" = "Oct 15 - Oct 16";
