--- a/zh-Hant.pass.strings
+++ b/zh-Hant.pass.strings
@@ -16,4 +16,4 @@
 "official_site" = "官方網站";
 "order_id" = "訂單編號";
 "city_title" = "高雄";
-"date_range" = "Oct 15 - Oct 16";
+"date_range" = "10月15日 - 10月16日";
