--- a/en.pass.strings
+++ b/en.pass.strings
@@ -14,6 +14,6 @@
 "event_start_date" = "Start Date";
 "event_end_date" = "End Date";
 "official_site" = "Official Site";
-"order_id" = "Order ID";
+"ticket_no" = "Ticket No";
 "city_title" = "Kaohsiung";
 "date_range" = "Oct 15 - Oct 16";
